Attempt to fix mobile flicker

--- a/src/templates/bespoke/bespoke.scss
+++ b/src/templates/bespoke/bespoke.scss
@@ -22,7 +22,7 @@ $progress-height: 5px;
   }
 
   body.loading {
-    display: none;
+    visibility: hidden;
   }
 
   // Common visibility control for slides
